<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <TextView android:text="@string/email"
              android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent"
              android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView4"
              app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="24dp"
              android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.0"/>
    <EditText android:id="@+id/et_email" android:inputType="textEmailAddress" android:hint="@string/hint_email"
              android:layout_width="match_parent" android:layout_height="wrap_content"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
              app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="24dp" android:layout_marginTop="8dp"/>


    <TextView android:text="@string/password"
              android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/textView3"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="24dp" app:layout_constraintHorizontal_bias="0.0"
              android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/et_email"/>
    <EditText android:id="@+id/et_password" android:inputType="textPassword" android:hint="@string/hint_password"
              android:layout_width="match_parent" android:layout_height="wrap_content"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="24dp"
              app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="24dp" android:layout_marginTop="8dp"/>


    <TextView android:text="@string/RetypePassword"
              android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/textView5"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="24dp" app:layout_constraintHorizontal_bias="0.0"
              android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/et_password"/>
    <EditText android:id="@+id/et_passwordConfirm" android:inputType="textPassword"
              android:hint="@string/hint_reTypePassword"
              android:layout_width="match_parent" android:layout_height="wrap_content"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
              app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="24dp" android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
    />
</androidx.constraintlayout.widget.ConstraintLayout>