<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TambahHakAkses">

    <TextView
            tools:text="TextView"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:layout_marginTop="16dp"/>
    <TextView
            android:textSize="18sp"
            tools:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/pintu_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView10" android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
    />
    <TextView
            android:text="@string/pintu_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/pintu_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/pintu_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>
    <TextView
            android:text="@string/pintu_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView14" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>
    <TextView
            android:text="@string/pintu_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView16" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView15" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>
    <TextView
            android:text="@string/pintu_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView17" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView16" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>
    <TextView
            android:text="@string/pintu_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView18" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView17" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>
    <TextView
            android:text="@string/pintu_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView19" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView18" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>
    <TextView
            android:text="@string/pintu_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView20" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView19" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="244dp" android:id="@+id/guideline2"/>
    <Switch
            android:text="Tidak"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch1"
            app:layout_constraintTop_toTopOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintBottom_toBottomOf="@+id/textView11" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <Switch
            android:text="Tidak"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch2"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="@+id/guideline2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <Switch
            android:text="Tidak"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch3"
            app:layout_constraintTop_toTopOf="@+id/textView13"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintStart_toStartOf="@+id/guideline2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <Switch
            android:text="Tidak"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch4"
            app:layout_constraintTop_toTopOf="@+id/textView14"
            app:layout_constraintBottom_toBottomOf="@+id/textView14"
            app:layout_constraintStart_toStartOf="@+id/guideline2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <Switch
            android:text="Tidak"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch5"
            app:layout_constraintTop_toTopOf="@+id/textView15"
            app:layout_constraintBottom_toBottomOf="@+id/textView15" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginEnd="8dp"/>
    <Switch
            android:text="Tidak"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch6"
            app:layout_constraintTop_toTopOf="@+id/textView16"
            app:layout_constraintBottom_toBottomOf="@+id/textView16"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Switch
            android:text="Tidak"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch7"
            app:layout_constraintTop_toTopOf="@+id/textView17"
            app:layout_constraintBottom_toBottomOf="@+id/textView17" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginEnd="8dp"/>
    <Switch
            android:text="Tidak"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch8"
            app:layout_constraintTop_toTopOf="@+id/textView18"
            app:layout_constraintBottom_toBottomOf="@+id/textView18"
            app:layout_constraintStart_toStartOf="@+id/guideline2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <Switch
            android:text="Tidak"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch9"
            app:layout_constraintTop_toTopOf="@+id/textView19"
            app:layout_constraintBottom_toBottomOf="@+id/textView19"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Switch
            android:text="Tidak"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch10"
            app:layout_constraintTop_toTopOf="@+id/textView20" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintBottom_toBottomOf="@+id/textView20"/>
    <Button
            android:text="@string/selesai"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_resReq" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView20" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="1.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>